--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -572,7 +572,7 @@ button{
     .time-sale {
         margin: 0px 50px;
     }
-    .best-class{
+    .card-wrapper{
         margin: 0px 50px;
     }
 }
@@ -618,7 +618,7 @@ button{
     .time-sale {
         margin: 0px 25px;
     }
-    .best-class{
+    .card-wrapper{
         margin: 0px 25px;
     }
 
