--- a/src/main/webapp/resources/css/contents.css
+++ b/src/main/webapp/resources/css/contents.css
@@ -165,11 +165,31 @@
   visibility: hidden;
 }
 .class-box {
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*align-items: flex-start;*/
+  /*justify-content: space-between;*/
+  /*position: relative;*/
   display: flex;
+  flex-wrap: wrap;
+}
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+/*.slide-content{*/
+/*  width: 100%;*/
+/*  flex-direction: column;*/
+/*  display: inline-flex;*/
+/*  height:100%;*/
+/*}*/
+.myContent{
+  /*/margin: 30px 10px;*/
+  width: 239px;
+  height: 300px;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-  position: relative;
+  display: inline-flex;
+
 }
 .class-box .class-title {
   font-size: 12px;
