--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -314,7 +314,7 @@ button {
 }
 
 .ment-1 {
-    width: 298px;
+    width: 100%;
     height: 88px;
     font-size: 34px;
     line-height: 44px;
@@ -324,7 +324,7 @@ button {
 
 .small-ment {
     margin: 10px 0px 0px;
-    width: 121px;
+    width: 100%;
     height: 52px;
     font-size: 16px;
     line-height: 26px;
