--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -76,6 +76,32 @@ button {
     color: #FFFFFF;
 }
 
+.search {
+    width: 420px;
+    height: 52px;
+    /*background: #F8F8F9;*/
+    /*border: 4px solid #F8F8F9;*/
+    /*box-sizing: border-box;*/
+    /*border-radius: 24px;*/
+    /*margin: 8px 0px 8px 0px;*/
+}
+
+.search-ment {
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: -0.15px;
+    width: 100%;
+    padding: 12px 52px 12px 16px;
+    background: rgb(248, 248, 249);
+    box-sizing: border-box;
+    border-radius: 40px;
+    color: rgb(26, 26, 26);
+    /*border: 1px solid rgb(248, 248, 249);*/
+    border: 1px solid rgb(248, 248, 249);
+
+}
+
+
 .navbar {
     position: relative;
     width: 100%;
@@ -121,7 +147,6 @@ button {
     width: 100%;
     max-width: 1176px;
     margin: 0px auto;
-    margin-left: 340px;
     display: flex;
     -webkit-box-align: center;
     align-items: center;
